2001-08-20  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (get_default_moniker): Update moniker being used

2001-07-30  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (capplet_init): Don't sync if we need legacy
	values
	(capplet_init): Call setup_session_mgmt if --apply or
	--init-session-settings was passed

2001-07-27  Bradford Hovinen  <hovinen@ximian.com>

	* RELEASE : 1.5.2

2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (capplet_init): Don't sync the database if
	retrieving legacy setings before creating the factory
	(create_control_cb): Create the config database ourselves
	(pf_destroy_cb): Remove evil hackery
	(get_control_cb): Ditto
	(create_control_cb): Support multiple property control objects --
	use a GtkObject called ref_obj to make sure the program quits when
	there are no such objects left
	(capplet_init): Pass default_moniker to factory callback;
	release_unref the db ourselves
	(get_control_cb): Support multiple controls; soak in global
	control and widget variables
	(legacy_is_modified): Remember to unref the property bag
	(quit_cb): Allow being called more than once
	(quit_cb): Unref ref_obj here
	(create_control_cb): Eliminate second signal connection
	(real_quit_cb): Free the pair structure
	(all_done_cb): Implement. Just add gtk_main_quit to the idle
	handler list
	(create_control_cb): Connect destroy signal of ref_obj to
	all_done_cb

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.c (get_control_cb): Set control data on PropertyFrame
	as part of evil hack.
	(quit_cb): Work if called multiple times...also evil.
	(pf_destroy_cb): unref the control...evil evil evil.

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.c: Remove debugging cruft.
	(capplet_init): Check for legacy with --init-session-settings too.

2001-07-24  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.[ch] (capplet_init): New argument of legacy files to
	check for changes.
